--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <h1 id="input">0</h1>
+  <div id="calculator"></div> 
   <script src="script.js"></script>
 </body>
 </html>
