--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="input">0</h1>
-  <div id="calculator"></div> 
+  <div class="container">
+    <h1 id="input">0</h1>
+    <div id="calculator"></div> 
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
